# handeyecalib

./: CMakeLists.txt  app_config.cpp  app_config.h  camera_device.cpp  camera_device.h  config.ini  device_session.cpp  device_session.h  handeye_auto_calibrator.cpp  handeye_auto_calibrator.h  handeye_auto_calibrator_algorithm.md  handeye_calibrator.cpp  handeye_calibrator.h  handeye_calibrator_algorithm.md  handeye_nonlinear_optimizer.cpp  handeye_nonlinear_optimizer.h  handeye_plane_optimizer.cpp  handeye_plane_optimizer.h  handeye_trihedral_bundle_optimizer.cpp  handeye_trihedral_bundle_optimizer.h  handeye_workpiece_corner_calibrator.cpp  handeye_workpiece_corner_calibrator.h  main.cpp  point_cloud_io.cpp  point_cloud_io.h  pose_io.cpp  pose_io.h  robot_device.cpp  robot_device.h  shape_detector.cpp  shape_detector.h  transform_utils.cpp  transform_utils.h
